# codewhale

./: .cnb.yml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja-JP.md  README.ko-KR.md  README.md  README.vi.md  README.zh-CN.md  config.example.toml  test_n_plus_one.rs  test_shlex_json.rs
.github/: APPROVED_CONTRIBUTORS  AUTHOR_MAP  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  v0868-milestone-sync.yml
.jules/: bolt.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: config_document.rs  external_credentials.rs  harness.rs  lib.rs  persistence.rs  provider.rs  provider_defaults.rs  provider_kind.rs  setup_state.rs  tests.rs  user_constitution.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: lib.rs
crates/hooks/: Cargo.toml
crates/lane/: Cargo.toml
crates/lane/src/: lib.rs  registry.rs  runtime.rs
crates/release/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml  benches.rs  perf_output.txt
docs/: AGENT_RUNTIME.md  AGENT_WORKFLOWS_0868.md  CLAUDE_PLUGIN_COMPAT.md  CONFIGURATION.md  CONTRIBUTORS.md  FLEET.md  FLEET_WORKFLOW_TUTORIAL.md  GUIDE.md  KEYBINDINGS.md  LOCALIZATION.md  MCP.md  MODES.md  PROVIDERS.md  REBRAND.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RUNTIME_API.md  SUBAGENTS.md  TOOL_LIFECYCLE.md  TOOL_SURFACE.md  WHALEFLOW_AUTHORING.md
docs/architecture/: command-dispatch.md
docs/evidence/: v0867-constitution-setup-current-build-evidence.md  v0867-constitution-setup-qa-matrix.md  v0867-guided-constitution-examples.md  (+1 more)
scripts/: catalog_models_dev.py  check-coauthor-trailers.py  check-readme-locales.sh  test_check_coauthor_trailers.py  v0867-setup-qa.sh
web/: middleware.ts  tailwind.config.ts  vitest.config.ts
workflows/: stopship.workflow.js
(+286 files in other folders)
