[package]
name = "codewhale-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model/provider registry and fallback strategy for CodeWhale"

[dependencies]
codewhale-config = { path = "../config", version = "0.8.66" }
serde.workspace = true
