[package]
name = "codewhale-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Config schema and precedence model for CodeWhale"

[dependencies]
anyhow.workspace = true
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.66" }
codewhale-secrets = { path = "../secrets", version = "0.8.66" }
dirs.workspace = true
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
